:package: o dia que nada deu certo

--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Garden</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Teste</h1>
+  <section class="max-width">
+    <div id="incentivo1">
+      <h1 class="intro">Parabéns pela nova idade! A partir de agora evite frequentar museus, pois podem te confundir com alguma antiguidade.</h1>
+      <div id="botao-passa"><img src="img/arrow.png" alt=""></div>
+    </div>
+  </section>
+
+
+
+
+
+  <script src="script.js"></script>
 </body>
 
 </html>
